tests/verifier/pass/test4.ial
function int32() foo()
{
    register int32() fptr;

    block entry
    {
        return fptr;
    }
}
