tests/verifier/fail/test7.ial
function void foo()
{
    block entry
    {
        nop;
        raw (00, 01, 02, 03);
    }
}
